@@ -1,6 +1,6 @@
 Package: polycor
 Version: 0.7-10
-Date: 2016-10-05
+Date: 2019-07-22
 Title: Polychoric and Polyserial Correlations
 Authors@R: person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca")
 Depends: R (>= 3.3.0)
@@ -10,4 +10,4 @@ LazyLoad: yes
 Description: Computes polychoric and polyserial correlations by quick "two-step" methods or ML, 
   optionally with standard errors; tetrachoric and biserial correlations are special cases.
 License: GPL (>= 2)
-URL: https://r-forge.r-project.org/projects/polycor/, http://CRAN.R-project.org/package=polycor
+URL: https://r-forge.r-project.org/projects/polycor/, https://CRAN.R-project.org/package=polycor
